# norppalive_service

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.test.toml  config.toml.example  docker-compose.yaml
.github/workflows/: deploy.yaml  rust.yml
audits/: software-design-analysis.md
docs/plans/: 2026-01-21-service-actor-refactoring.md  2026-05-11-livestream-auto-refetch-design.md  2026-05-11-livestream-auto-refetch.md
k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  redpanda-egress.yaml
k8s/overlays/prod/: deployment-patch.yaml  kustomization.yaml  sealed-secret.yaml  sealed-secret.yaml.example  sealed-yt-cookies.yaml
src/: config.rs  error.rs  lib.rs  main.rs  output.rs
src/actors/: detection.rs  mod.rs  names.rs  output.rs  stream.rs  supervisor.rs
src/actors/services/: bluesky.rs  generic_actor.rs  kafka.rs  mastodon.rs  mod.rs  twitter.rs
src/message_bus/: actor_bus.rs  http_bus.rs  mod.rs  trait_def.rs
src/messages/: detection.rs  mod.rs  output.rs  stream.rs  supervisor.rs  system.rs
src/services/: bluesky.rs  generic.rs  kafka.rs  mastodon.rs  mod.rs  twitter.rs
src/utils/: bluesky_facets.rs  bluesky_media.rs  detection_utils.rs  image_utils.rs  mod.rs  output.rs  temperature_map.rs
tests/: actor_integration_tests.rs  integration_tests.rs  lib.rs  mocks.rs  services_integration_tests.rs
tests/actors/: stream_tests.rs
