[package]
name = "norppalive_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = "0.2.29"
actix = "0.13"
actix-rt = "2.10"
async-trait = "0.1"
atrium-api = "0.25.4"
atrium-xrpc = "0.12.3"
atrium-xrpc-client = { version = "0.5.14", features = ["reqwest"] }
base64 = "0.22.1"
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive"] }
enum_dispatch = "0.3.13"
ffmpeg-next = "7.1.0"
futures = "0.3.31"
histogram = "0.11.3"
image = "0.25.6"
imageproc = "0.25.0"
ipld-core = { version = "0.4.2", features = ["serde"] }
lazy_static = "1.5.0"
megalodon = "1.0.0"
miette = { version = "7.6.0", features = ["fancy"] }
rand = "0.9.1"
rdkafka = "0.37.0"
reqwest = { version = "0.12.18", features = ["multipart", "json", "blocking", "stream"] }
reqwest_old = { version = "0.11.27", features = ["multipart", "json", "blocking", "stream"], package = "reqwest" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.15"
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
twitter-api-v1 = { version = "0.2.1", features = ["tokio", "with_tokio_fs"] }
twitter-v2 = "0.1.8"

[dev-dependencies]
mockall = "0.13.1"

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "z"
